--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <div class="hero-visual">
                 <div class="profile-container">
                   <div class="profile-background"></div>
-                  <img src="assets/img/profile/profile-square-2.webp" alt="Your Name" class="profile-image">
+                  <img src="assets/img/profile/profile-square-2.webp" alt="Parfait Boitenin" class="profile-image">
                   <div class="floating-elements">
                     <div class="floating-icon icon-1"><i class="bi bi-truck"></i></div>
                     <div class="floating-icon icon-2"><i class="bi bi-code-slash"></i></div>
@@ -135,11 +135,11 @@
                 <p class="profession">Supply Chain Manager, Developer, Entrepreneur, Data Analyst</p>
 
                 <div class="contact-links">
-                  <a href="mailto:your.email@example.com" class="contact-item">
+                  <a href="mailto:parfaitboitenin@gmail.com" class="contact-item">
                     <i class="bi bi-envelope"></i>
                     parfaitboitenin@gmail.com
                   </a>
-                  <a href="tel:+1234567890" class="contact-item">
+                  <a href="https://wa.me/+2250720638824" class="contact-item">
                     <i class="bi bi-telephone"></i>
                     +225 07 20 63 88 24
                   </a>
@@ -403,7 +403,7 @@
           <div class="col-lg-4">
             <div class="resume-side" data-aos="fade-right" data-aos-delay="100">
               <div class="profile-img mb-4">
-                <img src="assets/img/profile/profile-square-2.webp" alt="Your Name" class="img-fluid rounded">
+                <img src="assets/img/profile/profile-square-2.webp" alt="Parfait Boitenin" class="img-fluid rounded">
               </div>
 
               <h3>Professional Summary</h3>
